# Disable automatic dependency tracking if using other tools than gcc and gmake
#AUTOMAKE_OPTIONS = no-dependencies

if DISABLE_GLOBAL_POINTERS
speex_noglobals = speex_noglobals.h
endif

pkginclude_HEADERS =  speex.h \
	speex_bits.h \
	speex_header.h \
	speex_callbacks.h \
	speex_stereo.h \
	speex_preprocess.h \
	speex_jitter.h \
	speex_echo.h \
	$(speex_noglobals)

